09-28 01文件复制修改

--- a/文件复制.html
+++ b/文件复制.html
@@ -94,7 +94,7 @@
 
 <script>
 const $ = id=>document.getElementById(id);
-const ignoreDirs = new Set(['.obsidian-cache', 'node_modules', 'dist']);
+const ignoreDirs = new Set(['.obsidian-cache', 'test', 'node_modules', 'dist']);
 let rootHandle=null;
 let selected={handle:null,path:'',element:null};
 let isDirty=false;
